--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
     "html-react-parser": "^5.1.16",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -19,6 +20,7 @@
     "react": "^18.3.1",
     "react-anchor-navigation": "^0.2.7",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^15.0.1",
     "react-router-dom": "^6.26.2",
     "swiper": "^11.1.14"
