--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^15.0.2",
     "react-router-dom": "^6.26.2",
+    "sass": "^1.80.6",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
